# lsimons-bot-code

./: .env.example  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  LICENSE.md  README.md  app.py  fnox.toml  manifest.json  pyproject.toml  pyrightconfig.json  requirements.txt
.beads/: issues.jsonl
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.slack/: config.json
.zed/: settings.json
docs/: agent-setup.md  slack_example_event.py
docs/spec/: 000-shared-patterns.md  001-spec-based-development.md  002-slack-client.md  002-slack-listener-patterns.md  003-ai-assistant-integration.md  003-blog-module.md  004-bot-llm-layer.md  005-application-bootstrap.md  006-secret-management.md
history/: 00_READ_ME_FIRST.md  AI_ASSISTANT_ISSUES_SUMMARY.md  AI_ASSISTANT_PLAN.md  AI_ASSISTANT_QUICK_REF.md  AI_ASSISTANT_REFACTORING.md  PHASE_3_COMPLETION.md
listeners/: __init__.py  _assistant_utils.py  _llm.py  _prompt.py
listeners/actions/: __init__.py  assistant_feedback.py
listeners/events/: __init__.py  assistant_thread_started.py
lsimons_bot/: app.py  config.py  msg.py
lsimons_bot/app/: config.py  main.py
lsimons_bot/assistant/: __init__.py  assistant_message.py  assistant_thread_started.py
lsimons_bot/blog/: __main__.py  config.py  content.py  github.py  publish.py  wordpress.py
lsimons_bot/bot/: bot.py
lsimons_bot/home/: __init__.py  app_home_opened.py
lsimons_bot/listeners/: utils.py
lsimons_bot/listeners/actions/: assistant_feedback.py
lsimons_bot/listeners/commands/: __init__.py
lsimons_bot/listeners/events/: assistant_thread_started.py  assistant_user_message.py
lsimons_bot/listeners/views/: __init__.py
lsimons_bot/llm/: client.py
lsimons_bot/messages/: __init__.py  app_mention.py  message.py
lsimons_bot/slack/: __init__.py  operations.py
tests/: test_config.py  test_home.py
tests/app/: test_config.py  test_main.py
tests/blog/: test__main__.py  test_config.py  test_content.py  test_github.py  test_publish.py  test_wordpress.py
tests/home/: test_app_home_opened.py  test_init.py
tests/listeners/: _test_assistant_utils.py  test_listener_registration.py  test_llm.py
tests/llm/: test_client.py
tests/messages/: test_app_mention.py  test_init.py  test_message.py
tests/slack/: __init__.py  test_operations.py
(+18 files in other folders)
