[project]
name = "lsimons-bot"
version = "0.1.0"
description = "Slack Bot that automates part of Leo Simons' (lsimons) work at Schuberg Philis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "slack-bolt>=1.28.0",
    "slack-cli-hooks>=0.3.0,<1.0.0",
    "openai>=2.35.1",
    "aiohttp>=3.13.5",
    "PyGithub>=2.9.1",
    "requests>=2.33.1",
    "lsimons-llm[async] @ git+https://github.com/lsimons-bot/lsimons-llm.git",
]
authors = [
    { name = "lsimons" }
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "basedpyright>=1.39.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.uv]
exclude-newer = "1 week"
